--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string-array name="spinner_gender">
         <item>Hombre</item>
         <item>Mujer</item>
+        <item>Otros</item>
         <item>Prefiero no decirlo</item>
     </string-array>
 
