Cambios en los XML

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,49 @@
     <string name="descripcion">Descripción</string>
     <string name="describa_lo_sucedido">Describa lo sucedido</string>
     <string name="ingrese_el_motivo_del_incidente">Ingrese el motivo del incidente</string>
+    <string name="asistencia">Asistencia</string>
+    <string name="escaneaqr">escaneaQr</string>
+    <string name="tomar_asistencia">Tomar asistencia</string>
+    <string name="curp_token">CURP / Token</string>
+    <string name="raciones">Raciones</string>
+    <string name="foto">Foto</string>
+    <string name="usa_el_curp_o_token_del_comensal">Usa el CURP o token del comensal</string>
+    <string name="no_conoces_tus_datos">¿No conoces tus datos?</string>
+    <string name="iniciar_sesion">Iniciar Sesión</string>
+    <string name="contrasena">Contraseña</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="bienvenido_de_vuelta">Bienvenido de vuelta</string>
+    <string name="no_est_s_registrado">¿No estás registrado?</string>
+    <string name="subir_menu">Subir menú</string>
+    <string name="frijoles_salsa">Frijoles/Salsa</string>
+    <string name="pan_tortilla">Pan/Tortilla</string>
+    <string name="plato_fuerte">Plato fuerte</string>
+    <string name="sopa_arroz">Sopa/Arroz</string>
+    <string name="agua_del_dia">Agua del día</string>
+    <string name="men_del_dia">Menú del día</string>
+    <string name="mensaje_menu">Llena todos los campos para subir el menú del día y que los comensales puedan verlo.</string>
+    <string name="reg_form">reg_form</string>
+    <string name="registrar">Registrar</string>
+    <string name="f_de_nacimiento">F. de nacimiento</string>
+    <string name="curp">CURP</string>
+    <string name="apellido_materno">Apellido materno</string>
+    <string name="nombre">Nombre</string>
+    <string name="apellido_paterno">Apellido paterno</string>
+    <string name="mensaje_registro">Ingresa los datos del nuevo comensal</string>
+    <string name="registro_de_usuario">Registro de usuario</string>
+    <string name="estad_sticas_diarias">Estadísticas diarias</string>
+    <string name="raciones_pagadas">Raciones pagadas</string>
+    <string name="raciones_donadas">Raciones donadas</string>
+    <string name="dinero_recaudado">Dinero recaudado</string>
+    <string name="comensales_de_hoy">Comensales de hoy</string>
+    <string name="actualizar_menu">Actualizar menu</string>
+    <string name="cerrar_sesi_n">Cerrar sesión</string>
+    <string name="imagen_registrar_usuario">Imagen Registrar Usuario</string>
+    <string name="imagen_pase_de_lista">Imagen Pase de Lista</string>
+    <string name="dif_logo">DIF_Logo</string>
+    <string name="registrar_usuario">Registrar usuario</string>
+    <string name="para_los_que_vienen_por_primera_vez">Para los que asisten por primera vez</string>
+    <string name="pase_de_lista">Pase de lista</string>
+    <string name="para_aquellos_que_ya_est_n_registrados">Para aquellos que ya están registrados</string>
 
 </resources>
