--- a/RoboModel (1).ipynb
+++ b/RoboModel (1).ipynb
@@ -148,8 +148,8 @@
     "    dirty_cells = [model.dirty_cells] * model.schedule.steps\n",
     "    data = {'Steps': model.schedule.steps, 'Number of Cleaners': [num_cleaners] * model.schedule.steps, 'Dirty Cells': dirty_cells}\n",
     "    df = pd.DataFrame(data)\n",
-    "    sns.lineplot(x='Steps', y='Number of Cleaners', data=df, label='Number of Cleaners', ax=ax, marker= 'o', ci = 90)\n",
-    "    sns.lineplot(x='Steps', y='Dirty Cells', data=df, label='Dirty Cells', ax=ax, marker= 'o', ci = 90)\n",
+    "    sns.lineplot(x='Steps', y='Number of Cleaners', data=df, label='Number of Cleaners', ax=ax, marker= 'o')\n",
+    "    sns.lineplot(x='Steps', y='Dirty Cells', data=df, label='Dirty Cells', ax=ax, marker= 'o')\n",
     "    ax.set_xlabel('Steps')\n",
     "    ax.set_ylabel('Count')\n",
     "    ax.legend()\n",
@@ -163,7 +163,7 @@
     "    cleaning_efficiency = cleaned_cells / total_cells\n",
     "    data = {'Steps': model.schedule.steps, 'Cleaning Efficiency': [cleaning_efficiency] * model.schedule.steps}\n",
     "    df = pd.DataFrame(data)\n",
-    "    sns.lineplot(x='Steps', y='Cleaning Efficiency', data=df, label='Cleaning Efficiency', ax=ax, marker='o', ci = 90)\n",
+    "    sns.lineplot(x='Steps', y='Cleaning Efficiency', data=df, label='Cleaning Efficiency', ax=ax, marker='o')\n",
     "    ax.set_xlabel('Steps')\n",
     "    ax.set_ylabel('Cleaning Efficiency')\n",
     "    ax.legend()\n",
